--- a/taxi-ui/package.json
+++ b/taxi-ui/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@types/faker": "^4.1.4",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
+    "faker": "^4.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
