--- a/taxi-ui/angular.json
+++ b/taxi-ui/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "node_modules/bootswatch/dist/lumen/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": [
