--- a/taxi-ui/package.json
+++ b/taxi-ui/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^9.1.0",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
